Fixup List button not showing until refresh, Add multiple quest slots, Collapsible panels (#169)
* Fixup list button not showing when new region unlcoked

* Unlock 1 extra quest slot per region unlocked

* Update effectEngineRunner.ts

* move pokeball selector to own container

* collapsable card containers

* Move Pokemon list, battle item container

* Quest slots unlocked base on quest level

* Fixup QP given

* Oak items collapsable

* Questlist collapsable

* Hatchery collapsable

* Hatchery, Quest list fully clickable

* Move buttons

* Update changelog

* Update changelog

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -58,6 +58,10 @@
   background-color: rgba(0,0,0,0.5)
 }
 
+[data-toggle="collapse"] {
+  cursor: pointer;
+}
+
 #interactionView {
   min-height: 200px;
 }
@@ -248,7 +252,6 @@ img {
 }
 
 .badge-not-acquired {
-
   -webkit-filter: grayscale(70%) contrast(3%); /* Safari 6.0 - 9.0 */
   filter: grayscale(70%) contrast(3%);
 }
